--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,49 @@ canvas {
     display: none;
   }
 }
+#text_message{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  text-align: center;
+  animation: rainbow 5s linear infinite;
+  font-size: 100px;
+}
+
+
+
+@keyframes rainbow {
+  0% {
+      color: red;
+  }
+
+  14% {
+      color: orange;
+  }
+
+  28% {
+      color: yellow;
+  }
+
+  42% {
+      color: green;
+  }
+
+  57% {
+      color: blue;
+  }
+
+  71% {
+      color: indigo;
+  }
+
+  85% {
+      color: violet;
+  }
+
+  100% {
+      color: red;
+  }
+}
